Fixed navbar collapse issue

--- a/frontend/src/styles/custom.scss
+++ b/frontend/src/styles/custom.scss
@@ -64,7 +64,7 @@ html, body {
 body { 
   padding-top: 76px;
   @media screen and (max-width: 768px) {
-      padding-top: 58px;
+      padding-top: 57.5px;
   }
 }
 
